# ChangeLog for games-board/mt_gtk_client
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-board/mt_gtk_client/ChangeLog,v 1.5 2010/11/08 19:56:22 hwoarang Exp $

  08 Nov 2010; Markos Chandras <hwoarang@gentoo.org>
  mt_gtk_client-0.1.98.ebuild:
  Keyworded for amd64. Bug #344437

  08 Feb 2007; Chris Gianelloni <wolf31o2@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

*mt_gtk_client-0.1.98 (13 Jul 2003)

  13 Jul 2003; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by TGL <degrenier@easyconnect.fr> #13379.