@@ -1,4 +1,14 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST mt_gtk_client-0.1.98.tar.bz2 181458 RMD160 b6a946b478a114b64dee8e56d72539fa577c8dde SHA1 87e98d344f26f27539edc8832b1bf4f9395dd597 SHA256 094539edc591d470a85f742fabf077f1054ae0362424899a1da25cde48f2de16
-EBUILD mt_gtk_client-0.1.98.ebuild 921 RMD160 58422d1cb3885b9711087fa1b8054dbe6d0f8ac4 SHA1 056250a15d9fb0c199309b968c86251e6d722ef4 SHA256 61c1ddd56e74dfcefa30c414b4ffb5b5b4e916b0fe98db1da9d413469608997c
-MISC ChangeLog 619 RMD160 e545e188f54ba2a44ef1496c97c020ba9c3f7d64 SHA1 7c61213eca50069e33ae95a2e2bdc51d459c820d SHA256 d9fd001eb64035ee62eed9be75801dc39a26a1bbcf6f9b4d44e857e817d65366
+EBUILD mt_gtk_client-0.1.98.ebuild 974 RMD160 fbc1bec29bbdec22e6df8d542b3b026bca5f5b8f SHA1 383436d9c31675adc7296891e7a397e0fe1b36fe SHA256 258d20a0eafa59132723b81862a340ef99f95ffc1b82fb0dbab28b53e0517bae
+MISC ChangeLog 763 RMD160 efe6e48a5bf8bae84a5db83e5aaaaa00c97cbeed SHA1 5bea9d1eefe071107cc8c8329e245be9034bd742 SHA256 acf57d62554138c35de73154b58f38ce1b8d35f30084e34e6003a6183633a95e
 MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.18 (GNU/Linux)
+
+iEYEARECAAYFAk9wHBMACgkQIY77eQFFFC2NkQCgwsEhsPOTEXspONLcqrkCo96f
+CEEAoLrpkobW8zKovXiBL+lBrdGZbiki
+=ex4t
+-----END PGP SIGNATURE-----
