@@ -1,6 +1,9 @@
 # ChangeLog for games-board/mt_gtk_client
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-board/mt_gtk_client/ChangeLog,v 1.5 2010/11/08 19:56:22 hwoarang Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-board/mt_gtk_client/ChangeLog,v 1.6 2012/03/26 07:34:31 tupone Exp $
+
+  26 Mar 2012; Tupone Alfredo <tupone@gentoo.org> mt_gtk_client-0.1.98.ebuild:
+  Fix build with not locale files. Bug #408449 by Piotr Szymaniak
 
   08 Nov 2010; Markos Chandras <hwoarang@gentoo.org>
   mt_gtk_client-0.1.98.ebuild:
